<resources>
    <string name="app_name">Volleyball Court Mapping</string>
    <string name="action_OpenGallery">open gallery</string>
    <string name="image_preview">image Preview</string>
    <string name="action_canny">Canny</string>
    <string name="action_hough">Hough</string>
    <string name="transform">Transform</string>
    <string name="goback">Go Back</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="action_color_slicing">color Slicing</string>
    <string name="action_resetImage">clear all</string>
    <string name="add_image">Add image</string>
    <string name="debug_mode">debug and config mode</string>
    <string name="court_side_quest">Select the correct volleyball court side:</string>
    <string name="processing">Processing... Please wait</string>
    <string name="finished">Done!</string>
    <string name="badFinish">Something went wrong!</string>
    <string name="action_goBack">Go back</string>
    <string name="empty" />
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="select_side">Select court side</string>
    <string name="lines_not_detected">Volleyball court lines cannot be automatically detected</string>
    <string name="try_manually">Please select last 6 meters of a half field</string>
    <string name="no_image_uploaded">No image uploaded</string>
    <string name="positions">positions</string>
    <string name="select_4_corners">Select the 4 corners</string>
    <string name="corners_before">Press Corners before and eventually follow CORNER detection procedure</string>
    <string name="compute">Compute</string>
    <string name="clik_open">Open an image first</string>
</resources>
