<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DebugActivity">

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_preview"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/dashed_small" />

    <TextView
        android:id="@+id/tvDebugMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="                  "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPreview" />


    <Button
        android:id="@+id/btn_corners"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:onClick="findDebugCorners"
        android:text="Corners"
        android:enabled="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDebugMsg" />

    <Button
        android:id="@+id/btn_transform"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:onClick="transformImage"
        android:text="@string/transform"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvDebugMsg" />

    <Button
        android:id="@+id/btn_classify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="classifyImage"
        android:text="Classify"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_corners"
        app:layout_constraintStart_toStartOf="@+id/btn_corners"
        app:layout_constraintTop_toBottomOf="@+id/btn_corners" />

    <Button
        android:id="@+id/btn_positions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="findPositions"
        android:text="@string/positions"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_transform"
        app:layout_constraintStart_toStartOf="@+id/btn_transform"
        app:layout_constraintTop_toBottomOf="@+id/btn_transform" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_classify">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_selectSide"
            app:layout_constraintStart_toEndOf="@+id/tv_selectSide"
            app:layout_constraintTop_toTopOf="@+id/tv_selectSide">

            <RadioButton
                android:id="@+id/radio_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/left"
                android:onClick="radioChange"
                />

            <RadioButton
                android:id="@+id/radio_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                android:onClick="radioChange"
                android:text="@string/right" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_MaxThreshCanny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Canny max Th."
            app:layout_constraintEnd_toEndOf="@+id/tv_HoughMinLength"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_HoughMinLength" />

        <SeekBar
            android:id="@+id/seekBar_MaxThreshCanny"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:max="600"
            android:progress="405"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_MaxThreshCanny"
            app:layout_constraintTop_toTopOf="@+id/tv_MaxThreshCanny" />

        <TextView
            android:id="@+id/tv_MinThreshCanny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Canny min Th."
            app:layout_constraintEnd_toEndOf="@+id/tv_HoughMinLength"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_MaxThreshCanny" />

        <SeekBar
            android:id="@+id/seekBar_MinThreshCanny"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:max="600"
            android:progress="363"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_MinThreshCanny"
            app:layout_constraintTop_toTopOf="@+id/tv_MinThreshCanny" />


        <TextView
            android:id="@+id/tv_HoughMinLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Hough min. length"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_HoughVotes" />

        <SeekBar
            android:id="@+id/seekBar_HoughMinLength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:max="350"
            android:progress="213"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_HoughMinLength"
            app:layout_constraintTop_toTopOf="@+id/tv_HoughMinLength" />

        <TextView
            android:id="@+id/tv_HoughVotes"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="4dp"
            android:text="Hough votes"
            app:layout_constraintEnd_toEndOf="@+id/tv_HoughMinLength"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_HoughMaxDistance" />

        <SeekBar
            android:id="@+id/seekBar_HoughVotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:max="100"
            android:progress="55"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_HoughVotes"
            app:layout_constraintTop_toTopOf="@+id/tv_HoughVotes" />

        <TextView
            android:id="@+id/tv_HoughMaxDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Hough max dist."
            app:layout_constraintEnd_toEndOf="@+id/tv_HoughMinLength"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_selectSide" />

        <SeekBar
            android:id="@+id/seekBar_HoughMaxDistance"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_marginStart="4dp"
            android:max="100"
            android:progress="66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_HoughMaxDistance"
            app:layout_constraintTop_toTopOf="@+id/tv_HoughMaxDistance" />


        <TextView
            android:id="@+id/tv_selectSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_side"
            app:layout_constraintEnd_toEndOf="@+id/tv_HoughMinLength"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="(select first)"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>